--- a/src/assets/style/responsivo.css
+++ b/src/assets/style/responsivo.css
@@ -19,6 +19,10 @@
         padding-right: 1rem;
     }
 
+    .secao-horizontal .cartao {
+        column-gap: 0.5rem;
+    }
+
     .secao-horizontal .cartao__imagem {
         height: 56px;
         width: 56px;
@@ -26,6 +30,8 @@
 
     .secao-horizontal .cartao__titulo {
         font: 700 14px/20px Open Sans, sans-serif;
+        grid-row: 1/4;
+        align-items: center;
     }
 
     .secao-vertical .cartao {
@@ -42,7 +48,7 @@
     }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1399px) {
+@media only screen and (min-width: 1024px) and (max-width: 1329px) {
 
     .container {
         padding-left: 1.25rem;
@@ -86,7 +92,7 @@
 
 }
 
-@media only screen and (min-width: 1400px) {
+@media only screen and (min-width: 1330px) {
 
     .navbar {
         display: none;
